--- a/stylesheets/file-icons.less
+++ b/stylesheets/file-icons.less
@@ -112,6 +112,7 @@
   &[data-name$=".py"]:before { .python-icon; .dark-yellow; }
 
   // Ruby icon
+  &[data-name$="Pipefile"]:before,
   &[data-name$="Gemfile"]:before,
   &[data-name$="Gemfile.lock"]:before,
   &[data-name$="Rakefile"]:before,
